erDiagram
    USER ||--o| CART : "owns (logical userId)"
    USER ||--o{ ORDER : "places (logical userId)"
    USER }o--o{ PRODUCT : "wishlist product IDs"
    PRODUCT }o--o{ PRODUCT : "relatedProducts refs"
    ORDER }o--o{ PRODUCT : "items.productId snapshot"

    USER {
        ObjectId _id PK
        string name
        string email UK
        string password_hash
        string role
        string avatar
        object address
        string[] wishlist
        datetime createdAt
        datetime updatedAt
    }

    CART {
        ObjectId _id PK
        string userId UK
        object[] items "embedded cart item snapshots"
        datetime createdAt
        datetime updatedAt
    }

    CART_ITEM {
        string productId
        string nm
        string ct
        number pr
        string img
        number quantity
    }

    PRODUCT {
        ObjectId _id PK
        string nm
        string ct
        number pr
        string img
        string desc
        string material
        string[] sizes
        string colour
        string[] features
        string[] tags
        ObjectId[] relatedProducts FK
        boolean inStock
        datetime createdAt
        datetime updatedAt
    }

    ORDER {
        ObjectId _id PK
        string orderId UK
        string userId "logical email identifier"
        string userName
        object[] items "embedded product snapshots"
        number subtotal
        number shippingCost
        number totalAmount
        object shippingAddress
        string paymentMethod
        string trackingNumber
        string trackingStatus
        datetime createdAt
        datetime updatedAt
    }

    SUBSCRIBER {
        ObjectId _id PK
        string email UK
        datetime createdAt
        datetime updatedAt
    }

    CART ||--o{ CART_ITEM : contains
    ORDER ||--o{ ORDER_ITEM : contains
    CART_ITEM }o--|| PRODUCT : "snapshot source"
    ORDER_ITEM }o--|| PRODUCT : "snapshot source"
